# mws-ai-agents

./: Makefile  README.md  pyproject.toml
configs/: default.yaml
docs/: architecture.md  benchmarking.md  diagrams.md  security.md
knowledge_base/curated/: competition_notes.md  course_notes.md
src/kaggle_multi_agent/: agents.py  cli.py  contracts.py  data.py  features.py  graph.py  guardrails.py  llm.py  metrics.py  modeling.py  profiling.py  rag.py  registry.py  reporting.py  settings.py  tools.py  tracking.py
tests/: test_agents.py  test_cli.py  test_contracts.py  test_data.py  test_end_to_end_smoke.py  test_features.py  test_graph.py  test_guardrails.py  test_imports.py  test_metrics.py  test_modeling.py  test_profiling.py  test_rag.py  test_registry.py  test_reporting.py  test_settings.py  test_tools.py  test_tracking.py
